--- a/index.html
+++ b/index.html
@@ -11,14 +11,32 @@
 <body>
     <div class="container">
         <h1>Riconoscimenti 2023</h1>
-        <p>Il tuo messaggio qui... obladì obladà
+        <p>
+            Premessa: Sono incapace a scrivere, non sono un grande scrittore, tantomeno un lettore, non aspettatevi una lettura tanto scorrevole
             <br>
-            Okay, ce l'abbiamo fatta
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-        </p>
+            Okay, ce l'abbiamo fatta. Siamo arrivati alla fine di quest'anno esaustivo, ma molto importante da un punto di vista personale ed emotivo. Non è facile raccontare tutti i momenti e tutte le esperienze che lo hanno caratterizzato, dunque sono grato a chiunque abbia contribuito ad averlo reso così speciale.
+            <br>
+            Ci tenevo a fare giusto giusto un paio di ringraziamenti:
+            <ul>
+                <li>Grazie ad Alberto per avermi trasmesso la passione per Kanye West, il mio artista preferito </li>  //Alberto
+                <l1>Grazie a Lalla per aver reso la musica una delle mie passioni più grandi </l1>
+                <li>Grazie a LeoNapoli per avermi introdotto al mondo dei vinili (ti entrerò in casa) </li>
+                <li>Grazie ai miei gymbro Lanza, Marco, Pietro, Matteo e Riccardo per avermi spinto a tornare in palestra (anche a te Bonny sei il migliore) </li>
+                <li>Grazie a Grapi per le tue storie strappalacrime, sono veramente gratissimo </li>
+                <li>Grazie a Mihali, Colle, Vetto, Razvan, Colò, Rei, Barbisan, Zami, Mazzo, Bulu e Lady Zannoni voi mostri ci siete dalla prima/seconda </li>
+                <li>Grazie a Zuk per tutte le storie da pirata ed i pomeriggi buttati su Lol </li>
+                <li>Grazie alla gang di Rossano, Simeoni, Vrabie e Shah per i meme che tirate fuori </li>
+                <li>Grazie a Mohammed Samir Svitniz per la serata più diocan divertente </li>
+                <li>Grazie a Jacopo per avermi introdotto alle disco zona Bassano (posti magici) </li>
+                <li>Grazie ad Alice, Ari, Franci, Nicole e Pesca per tutte le lagne che hanno dovuto sopportare da me </li>
+                <li>Grazie a Gin per i 50 reel che mi manda ogni giorno </li>
+                <li>Grazie a Marco (uomo riccio) e Seb per le chiamate del cazzo che facevamo </li>
+                <li>Grazie a Giorgia per avermi reso una persona migliore </li>
+            </ul>
+            <br>
+            Ci sentiamo l'anno prossimo
+            </p>
+            <h1><b>2024</b></h1>
     </div>
 
     <img src="https://cdn.discordapp.com/attachments/1152947480766447616/1189286370125041696/newtelesap.png">
