--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <li>Grazie ai miei gymbro Lanza, Marco, Pietro, Matteo e Riccardo per avermi spinto a tornare in palestra (anche a te Bonny sei il migliore) </li>
                 <li>Grazie a Grapi per le tue storie strappalacrime, sono veramente gratissimo </li>
                 <li>Grazie a Mihali, Colle, Vetto, Razvan, Colò, Rei, Barbisan, Zami, Mazzo, Bulu e Lady Zannoni voi mostri ci siete dalla prima/seconda </li>
-                <li>Grazie a Zuk per tutte le storie da pirata ed i pomeriggi buttati su Lol </li>
+                <li>Grazie a Zuk per tutte le storie da pirata ed i pomeriggi buttati su <a href = "https://nonciclopedia.org/wiki/League_of_Legends"> Lol </a> </li>
                 <li>Grazie alla gang di Rossano, Simeoni, Vrabie e Shah per i meme che tirate fuori </li>
                 <li>Grazie a Mohammed Samir Svitniz per la serata più diocan divertente </li>
                 <li>Grazie a Jacopo per avermi introdotto alle disco zona Bassano (posti magici) </li>
                 <li>Grazie ad Alice, Ari, Franci, Nicole e Pesca per tutte le lagne che hanno dovuto sopportare da me </li>
                 <li>Grazie a Gin per i 50 reel che mi manda ogni giorno </li>
-                <li>Grazie a Marco (uomo riccio) e Seb per le chiamate del cazzo che facevamo </li>
-                <li>Grazie a Giorgia per avermi reso una persona migliore </li>
+                <li>Grazie a Ines, Marco (uomo riccio) e Seb per le chiamate del cazzo che facevamo per giocare </li>
+                <li>Grazie a Giorgia per avermi reso una persona migliore e per il bel tempo passato insieme </li>
             </ul>
             <br>
             Ci sentiamo l'anno prossimo
