cambiamento alla fine

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <li>Grazie a Giorgia per avermi reso una persona migliore e per il bel tempo passato insieme </li>
             </ul>
             <br>
-            Ci sentiamo l'anno prossimo
+            Grazie per essere stati parte della mia storia
+            <br>
+            Ci si sente l'anno prossimo !
             </p>
             <h1><b>2024</b></h1>
     </div>
