sistemato problema elemento lista

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>Grazie ad Arsie per avermi aiutato con la realizzazione di questo sito e di Telesap [ out soon ] </li>
                 <li>Grazie ad Alberto per avermi trasmesso la passione per Kanye West, il mio artista N°1 </li>
-                <l1>Grazie a Lalla per aver reso la musica una delle mie passioni più grandi </l1>
+                <li>Grazie a Lalla per aver reso la musica una delle mie passioni più grandi </li>
                 <li>Grazie a LeoNapoli per avermi introdotto al mondo dei vinili (ti entrerò in casa) </li>
                 <li>Grazie ai miei gymbro Lanza, Marco, Pietro, Matteo e Riccardo per avermi spinto a tornare in palestra (anche a te Bonny sei il migliore) </li>
                 <li>Grazie a Grapi per le tue storie strappalacrime, sono veramente gratissimo </li>
